Build on Java 11. But jaxws is excluded from integration tests